--- a/esma/Afuv.html
+++ b/esma/Afuv.html
@@ -13,23 +13,38 @@
 
 <h3>el-Afuvv, er-Raûf &emsp;<button class=goBack>◀</button></h3>
 
-<p>
-<img src="" alt="hat eseri">
+<p>Bağışlayıcı isimlerden <b>Afuvv</b> kelimesi "affeden" anlamında 5 kere kullanılmış, biri hariç hepsinde <b>Gafûr</b> ile birlikte: <br>
+  <a name="v=4:99&r=Efw&r=gfr">4:99</a> 
+  <b>... vekânallâhu ‘afuvven ġafûrâ</b> <br>
+  <i>İşte umulur ki Allah onları affeder. Allah çok affedicidir, çok bağışlayandır.</i>
+</p><p>
+<img src="image/afuvv gafur.jpg" alt="yâ Afuvv, yâ Gafûr"></p>
 <div class="caption">
-  Kaynak: <a target=Kuran href="">Pinterest</a>
-</div></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
-</p>
-<p>
-<img src="" alt=""></p>
-<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
-<i></i>
-</p>
-<p></p>
+  <b>yâ Afuvv, yâ Gafûr</b> -- ey affeden, ey hataları silen <br>
+  Hattat: <a target=Kuran href="https://www.bitmezat.com/en/auction/12727/islamic-calligraphy-auction/page/7">Osman Yayla</a>
+</div>
 <br>
+<p>Diğer isim <b>Raûf</b> ise "şefkatli" anlamında 11 kere kullanılmış, hemen hepsinde <b>Rahîm</b> ile birlikte: <br>
+  <a name="v=24:20&r=rAf&r=rHm">24:20</a> 
+  <b>... veennallâhe raûfun rahîm</b> <br>
+  <i>Ya Allah’ın üzerinizdeki fazlı ve rahmeti bulunmasaydı... Hele ki Allah çok şefkatlidir, pek merhametlidir.</i>
+</p><p>
+<img src="image/er-rauf.jpg" alt="er-Raûf"></p>
+<div class="caption">
+  <b>er-Raûf</b> -- şefkatli &emsp;
+  (Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/541628292657518493/">Pinterest</a>)
+</div>
+<br>
+<p>İki rahmet ismini birleştiren <b>raûfun rahîm</b> nitelemesi, Efendimiz için de bir yerde kullanılmış:
+<img class=full src="image/lekad caekum.jpg" alt="lekad caekum"></p>
+<div class="caption">
+  Tevbe 128. ayet --
+  <a target=Kuran href="http://www.kalemguzeli.org/hatteserleriayrinti.php?KNO=1725&HKNO=20">Kalem Güzeli</a>, Abdurrahman Depeler
+</div>
 <p>
-<img src="" alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+  <a name="v=9:128&r=rAf&r=rHm">9:128</a> 
+  <b>... bilmu-minîne raûfun rahîm</b> <br>
+  <i>müminlere karşı çok şefkatli, çok merhametli</i>
 </p>
 <script src="init.js"></script>
   </body>
