--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+1) {
+    #iki li:nth-child(n+2) {
         color: lightgray;
     }
     div.nav {
@@ -72,7 +72,7 @@
   <li>11. <a href="/Kitap/esma/Aliyy.html">el-Aliyy, el-Azîm</a>
   <li>12. <a href="/Kitap/esma/Gafur.html">el-Gafûr, eş-Şekûr</a>
   <li>13. <a href="/Kitap/esma/Tevvab.html">et-Tevvâb, el-Gaffâr</a>
-  <li>14. el-Afuvv, er-Raûf
+  <li>14. <a href="/Kitap/esma/Afuv.html">el-Afuvv, er-Raûf</a>
 </ol>
 <ol id="iki">
   <li>15. el-Ehad, es-Samed
