--- a/esma/Empty.html
+++ b/esma/Empty.html
@@ -13,23 +13,29 @@
 
 <h3> &emsp;<button class=goBack>◀</button></h3>
 
-<p>
-<img src="" alt="hat eseri">
-<div class="caption">
-  Kaynak: <a target=Kuran href="">Pinterest</a>
-</div></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
-</p>
-<p>
-<img src="" alt=""></p>
-<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
+<p></p>  
+<p class=preWrap>
+<img class=full src="" alt=""></p>
+<p><a name="v=3:1&r=gfr&r=*nb">3:1</a> <b></b> <br>
 <i></i>
 </p>
-<p></p>
-<br>
+<p class=preWrap></p>
+<p class=small><br>
+  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
+</p><br>
 <p>
-<img src="" alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+<img class=narrow src="" alt=""></p>
+<div class="caption">
+  <b>el-Gafûr</b> -- hataları silen
+</div>
+<p>
+<img class=narrow src="" alt=""></p>
+<div class="caption">
+  <b>eş-Şekûr</b> -- iyilikleri ödüllendiren
+</div>
+<p><a name="v=2:2&r=gfr&r=$kr">2:2</a>
+<b></b> <br>
+<i></i>
 </p>
 <script src="init.js"></script>
   </body>
