--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+2) {
+    #iki li:nth-child(n+3) {
         color: lightgray;
     }
     div.nav {
@@ -75,7 +75,7 @@
   <li>14. <a href="/Kitap/esma/Afuv.html">el-Afuvv, er-Raûf</a>
 </ol>
 <ol id="iki">
-  <li>15. el-Ehad, es-Samed
+  <li>15. <a href="/Kitap/esma/Ehad.html">el-Ehad, es-Samed</a>
   <li>16. el-Vâhid, el-Kahhâr
   <li>17. el-Vehhâb, er-Rezzâk
   <li>18. es-Semî', el-Basîr
