--- a/esma/Ehad.html
+++ b/esma/Ehad.html
@@ -18,28 +18,30 @@
 <div class="caption">
     <a name="v=112:1&r=AHd&r=Smd&r=wld">112:1</a> 
     <b>kul huvallâhu ehad</b><br>
-    <i>De ki: “O, Allah’tır; Tektir” </i>
+    <i>De ki: “O, Allah’tır, Birdir” </i>
 </div>
 <p>İkinci âyette <b>es-Samed</b> ismini okuyoruz. Açıklaması zor olan bu kavram için şu anlamlar verilmiş:
 Herşey O'na muhtaç olduğu hâlde, hiçbir şeye muhtaç olmayan; Öncesiz ve Sonrasız; Bütün evrenin asıl sebebi.
-<img src="image/es-samed.jpg" alt=""></p>
+<img class=narrow src="image/Alahussamed.jpg" alt=""></p>
 <div class="caption">
-  <b>el-ferdus-samed</b> -- 
-  <a target=Kuran href="https://islamansiklopedisi.org.tr/esma-i-husna">İslam Ansiklopedisi</a> <br>
-  Allah’ın yedi ismi (İmamzâde hattı)
+  <b>Allâhus-samed</b> -- 
+  <a target=Kuran href="https://tr.pinterest.com/pin/516506651004516736/">Pinterest</a> <br>
+  Allah’ın has ismidir, O'na mahsustur
 </div>
 <br>
 <p>Üçüncü âyet, "Allah'a atfedilen çocuk" kavramını reddediyor:
 <img class=narrow src="image/lem yelid.jpg" alt=""></p>
 <div class="caption">
-  <b>lem yelid velem yûled</b> -- doğurmamış ve doğurulmamış
+  <b>lem yelid velem yûled</b> -- doğurmamış, doğurulmamış
 </div>
+<br>
 <p class=preWrap>Bu surenin her âyetinde "tekil" kelimeler var:
 <b>ehad</b> sadece burada Allah için kullanılmış
 <b>samed</b> bütün Kitap'ta bir kere geçiyor
 <b>yelid-yûled</b> sadece burada Allah için kullanılmış
 <b>kufuv</b> bütün Kitap'ta bir kere geçiyor
-Sondaki <b>ehad</b> ise "hiç kimse" anlamında, Allah'ın Tekilliğini vurguluyor.
+
+Baştaki âyet <b>BİR</b> derken, sonra gelen üç olumsuz <b>lem</b> ve en sondaki "hiç kimse" anlamında <b>ehad</b>, Allah'ın Eşsizliğini ve Tekilliğini vurguluyor.
 <p>
 <img src="image/huvallahu ahad.jpg" alt=""></p>
 <div class="caption">
