--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+3) {
+    #iki li:nth-child(n+4) {
         color: lightgray;
     }
     div.nav {
@@ -76,7 +76,7 @@
 </ol>
 <ol id="iki">
   <li>15. <a href="/Kitap/esma/Ehad.html">el-Ehad, es-Samed</a>
-  <li>16. el-Vâhid, el-Kahhâr
+  <li>16. <a href="/Kitap/esma/Vahid.html">el-Vâhid, el-Kahhâr</a>
   <li>17. el-Vehhâb, er-Rezzâk
   <li>18. es-Semî', el-Basîr
   <li>19. el-Latîf, el-Habîr
