--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+4) {
+    #iki li:nth-child(n+5) {
         color: lightgray;
     }
     div.nav {
@@ -77,7 +77,7 @@
 <ol id="iki">
   <li>15. <a href="/Kitap/esma/Ehad.html">el-Ehad, es-Samed</a>
   <li>16. <a href="/Kitap/esma/Vahid.html">el-Vâhid, el-Kahhâr</a>
-  <li>17. el-Vehhâb, er-Rezzâk
+  <li>17. <a href="/Kitap/esma/Vehhab.html">el-Vehhâb, er-Rezzâk</a>
   <li>18. es-Semî', el-Basîr
   <li>19. el-Latîf, el-Habîr
   <li>20. el-Vedûd, el-Mecîd
