style changes again

--- a/esma/Bari.html
+++ b/esma/Bari.html
@@ -15,7 +15,7 @@
 
 <p>Haşr Suresinin son âyetinde yaratmakla ilgili üç isim var: <br>
 
-<img class=full src="image/el-halikul-bariul-musavvir.jpg" alt=""><p>
+<img class=full src="image/el-halikul-bari.jpg" alt=""><p>
 <div class="caption">
     <b>el-hâlik, el-bâri, el-musavvir</b>: <a target=Kuran href="https://www.facebook.com/photo/?fbid=900066330072270&set=huvallah%C3%BCl-halikul-bariul-musavviruha%C5%9Fr-suresi-ayet-24">Hattat Ahmet Demir</a>
   </div></p>
