--- a/esma/Vehhab.html
+++ b/esma/Vehhab.html
@@ -21,6 +21,9 @@
 </div>
 <p>Bu ismin geçtiği üç ayetten biri, <b>el-Vehhâb</b> ismiyle biten meşhur dua:
 <img src="image/la tuzig qulubana.jpg" alt="la tuzig qulubana"></p>
+<div class="caption">
+  <b>Rabbenâ lâ tuziġ kulûbenâ</b>
+</div>
 <p>
   <a name="v=38:9&r=whb">38:9</a> &ensp;
   <a name="v=38:35&r=whb">38:35</a> &ensp;
