--- a/ders/index.html
+++ b/ders/index.html
@@ -43,7 +43,7 @@
 <h3>Alıntılar</h3>
 <p>Yazılımı uygulayan web sayfaları</p>
 <ol>
-  <li><a href="/Kitap/rama/">Ramazan 2021 notları</a>
+  <li><a href="/Kitap/rama/">Ramazan 2020 notları</a>
   <li><a href="/Kitap/esma/">Ramazan 2023 notları</a>
   <li><a href="/Kitap/cuma/adalet.html"><small>Adalet ve ibadet (Karabaşoğlu)</small></a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
@@ -52,6 +52,7 @@
   <li><a href="/Kitap/cuma/iktibas.html"><small>Ahmed ü Mahmûd u Muhammed</small></a>
   <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
 </ol>
+<p>Levhalar: <a href="/Kitap/esma/Husna.html">Esmâ-i Husnâ</a></p>
 </div>
 <!-- <div class=gap></div> -->
 <div class=narrow>
