--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -51,22 +51,23 @@
 
 <script>
 "use strict";
-var index = 0;
+var index, current;
 function show_slide(i) {
-  index = i;
+  index = i; let max = FILES.length - 1;
   // adjust index at two ends
-  if (index > FILES.length - 1) index = 0 ;
-  if (index < 0) index = FILES.length - 1;
-  anchor.href = "/Kuran/reader.html#"+LINKS[index]
+  if (index > max) index = 0 ;
+  if (index < 0) index = max;
+  current = FILES[index]
+  anchor.href = "/Kuran/reader.html#"+current.link
   anchor.target = "iqra"
-  img.src = "image/"+FILES[index]
-  text.name = FILES[index]
+  img.src = "image/"+current.file
+  text.name = current.file
   text.innerText = "???"
 }
 title.innerText = document.title;
 prev.onclick = () => show_slide(index-1)
 next.onclick = () => show_slide(index+1)
-text.onclick = () => text.innerText = FILES[index]
+text.onclick = () => text.innerText = current.file
 document.onkeydown = evt => {
   if (!evt.key) return
   switch (evt.key.toUpperCase()) {
@@ -102,7 +103,7 @@ al-bari.png	Bari	v=2:54&r=xyr&r=brA
 al-musavvir.jpg	Bari	v=7:11&r=xlq&r=Swr
 el-halikul-bari.jpg	Bari	v=59:24&r=xlq&r=brA&r=Swr
 el-Aziz.jpg	Aziz	v=3:18&r=Ezz&r=Hkm
-el-azizul-hakim.jpg	Aziz	v=59:24&r=Ezz&r=Hkm
+el-azizul-hakim.jpg	Aziz	v=3:6&r=Ezz&r=Hkm
 el-halim.jpg	Alim	v=22:59&r=Hlm&r=Elm
 el-alim.jpg	Alim	v=33:51&r=Hlm&r=Elm
 allamul-guyub.jpg	Allam	v=9:78&r=Elm&r=gyb
@@ -113,30 +114,38 @@ fesebbih.jpg	Aliyy	v=56:96&r=smw&r=EZm
 subhanallahil-azim.JPG		
 el-gafur.jpg	Gafur	v=42:23&r=gfr&r=$kr
 vemen yagfiru.jpg	Gafur	v=3:135&r=gfr&r=*nb
-es-sekur.jpg	Gafur	v=42:23&r=gfr&r=$kr
+es-sekur.jpg	Gafur	v=35:34&r=gfr&r=$kr
 gaffar.jpg	Tevvab	v=71:10&r=gfr
 tevvab.jpg	Tevvab	v=2:37&r=twb&r=rHm
 kane tevvaba.jpg	Tevvab	v=110:3&r=gfr&r=twb
 lekad caekum.jpg	Afuv	v=9:128&r=rAf&r=rHm
-afuvv gafur.jpg	Afuv	#v=4:99&r=Efw&r=gfr
+afuvv gafur.jpg	Afuv	v=4:99&r=Efw&r=gfr
 er-rauf.jpg	Afuv	v=24:20&r=rAf&r=rHm
 huvallahu ahad.jpg	Ehad	v=112:1&r=AHd&r=Smd&r=wld
 kul huvallah.jpg	Ehad	v=112:1&r=AHd&r=Smd&r=wld
 lem yelid.jpg	Ehad	v=112:3&r=AHd&r=Smd&r=wld
 Alahussamed.jpg	Ehad	v=112:2&r=AHd&r=Smd&r=wld
 al-wahid.jpg	Vahid	v=12:39&r=wHd&r=qhr
-al-qahhar.jpg	Vahid	v=12:39&r=wHd&r=qhr
+al-qahhar.jpg	Vahid	v=39:4&r=wHd&r=qhr
 limenil-mulk.jpg	Vahid	v=40:16&r=wHd&r=qhr
-ya vehhab.jpg	Vehhab	v=51:58&r=rzq
+ya vehhab.jpg	Vehhab	v=38:35&r=whb
 ar-razzaq.jpg	Vehhab	v=51:58&r=rzq
-la tuzig qulubana.jpg	Vehhab	v=51:58&r=rzq`.split('\n')
+la tuzig qulubana.jpg	Vehhab	v=3:8&r=whb`.split('\n')
 
-const FILES = [], NAMES = [], LINKS = [];
+const FILES = []
 for (let d of DATA) {
     let [file, name, link] = d.split('\t')
     if (!link) continue
-    FILES.push(file); NAMES.push(name); LINKS.push(link)
+    FILES.push({file, name, link})
 }
 
-show_slide(0)
+function shuffle() {
+  //https://javascript.info/task/shuffle
+  for (let i = FILES.length - 1; i > 1; i--) {
+    let j = Math.floor(Math.random() * i) + 1;
+    [FILES[i], FILES[j]] = [FILES[j], FILES[i]];
+  }
+}
+show_slide(0); shuffle()
+
 </script>
