--- a/esma/Semi.html
+++ b/esma/Semi.html
@@ -11,31 +11,34 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>es-Semî’, el-Basîr &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p class=preWrap>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=*nb">3:1</a> <b></b> <br>
-<i></i>
+<p>Kitabımızda insana verilen üç nimet (kulak, göz, akıl) sık sık vurgulanır: <br> 
+<a name="v=67:23&r=smE&r=bSr">67:23</a>
+<b>vece’ale lekumus-sem’a vel-ebsâra vel-ef-ide</b> <br>
+<i>“O'dur sizi inşâ eden; size işitme, gözme ve (akleden) kalpler veren</i>
+</p>  
+<p>
+<img class=narrow src="image/es-semiul-basir.jpg" alt=""></p>
+<div class="caption">
+  <b>es-Semî’, el-Basîr</b> -- her şeyi duyan ve gören
+</div>
+<br>
+<p>Bu iki isim sık sık yan yana geliyor:
+<img src="image/leyse kemislihi.jpg" alt=""></p>
+<p><a name="v=42:11&r=smE&r=bSr">42:11</a> 
+  <b>leyse kemiślihi şey, vehuves-semî’ul-basîr</b> <br>
+  <i>Hiçbir şey, O'nun benzeri gibi bile olamaz. O duyandır, görendir.</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<br>
+<p>Bazı ayetlerde "iştmek" ve "bilmek" yan yana geçiyor:
+<img class=full src="image/takabbel minna.jpg" alt=""></p>
 <div class="caption">
-  <b>el-Gafûr</b> -- hataları silen
+  Hz İbrahim ve İsmail'in Kâbe'yi yaptıktan sonraki duaları
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
-<div class="caption">
-  <b>eş-Şekûr</b> -- iyilikleri ödüllendiren
-</div>
-<p><a name="v=2:2&r=gfr&r=$kr">2:2</a>
-<b></b> <br>
-<i></i>
+<p><a name="v=2:127&r=smE&r=Elm">2:127</a>
+<b>rabbenâ tekabbel minnâ, inneke entes-semî’ul-’alîm</b> <br>
+<i>Rabbimiz! Bunu bizden kabul et; Sensin her şeyi bilen, her şeyi duyan!”</i>
 </p>
 <script src="init.js"></script>
   </body>
