--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+5) {
+    #iki li:nth-child(n+6) {
         color: lightgray;
     }
     div.nav {
@@ -78,7 +78,7 @@
   <li>15. <a href="/Kitap/esma/Ehad.html">el-Ehad, es-Samed</a>
   <li>16. <a href="/Kitap/esma/Vahid.html">el-Vâhid, el-Kahhâr</a>
   <li>17. <a href="/Kitap/esma/Vehhab.html">el-Vehhâb, er-Rezzâk</a>
-  <li>18. es-Semî', el-Basîr
+  <li>18. <a href="/Kitap/esma/Semi.html">es-Semî’, el-Basîr</a>
   <li>19. el-Latîf, el-Habîr
   <li>20. el-Vedûd, el-Mecîd
   <li>21. el-Muhyî, el-Mumît
