--- a/ders/index.html
+++ b/ders/index.html
@@ -9,6 +9,7 @@
 <title>Iqra Dersler</title>
 
 <style>
+  h2 { margin-bottom: -10px; }
   h3 { margin-bottom: 8px; }
   p, ol { margin: 8px 0; }
   .narrow, .gap {
