--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -7,27 +7,28 @@
     
 <style>
   body {
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 600px;
     background: #59b;
     margin: auto;
   }
   #container {
     position: relative;    
+    user-select: none;
   }
-  div, h2 { text-align: center; }
+  div, h3 {
+    text-align: center;
+  }
   img {
     max-width: 100%;
     margin-top: 6px;
   }
-  #prev, #next {  
+  button {  
     cursor: pointer;
-    padding: 3px 6px;
+    padding: 2px 5px;
     color: gray;
-    user-select: none;
     font-size: large;
   }
-  #prev{ left: 0; }
-  #next{ right: 0; }
   button:hover {
     background: rgba(0, 0, 0, 0.5);
   }
@@ -35,19 +36,37 @@
     cursor: pointer;
     background: #eee;
     display: inline-block;
-    width: 200px;
+    font-size: small;
+    width: 170px;
     padding: 6px;
+  }
+  #explain {
+    margin: 20px 10px;
+    padding: 6px;
+    background: wheat;
+    line-height: 1.3;
+  }
+  #esma {
+    text-decoration: none;
   }
 </style>
 
-<h2 id=title></h2>
+<h3 id=title></h3>
 <div id=container>
     <button id=prev>◀</button>
+    <button><a id=esma>E</a></button>
     <div id=text></div>
     <button id=next>▶</button>
     <div id=div></div>
     <a id=anchor><img id=img src=""></a>
 </div>
+<p id=explain>
+  Esmâ-i Husnâ sayfalarında kullanılan hat eserlerine buradan erişilir. Levhaların ve diğer eserlerin referansları ilgili sayfalarda bulunur. <br>
+  * Soru işaretine tıklayınca, ipucu olarak dosyanın adı çıkar. <br>
+  * Resimlere tıklayınca, ayet mushaf içinde gösterilir. <br>
+  <br>
+  Mobil cihazlarda ekranı yan tutmak daha iyi okunmayı sağlar.
+</p>
 
 <script>
 "use strict";
@@ -55,13 +74,14 @@ var index, current;
 function show_slide(i) {
   index = i; let max = FILES.length - 1;
   // adjust index at two ends
-  if (index > max) index = 0 ;
-  if (index < 0) index = max;
-  current = FILES[index]
+  if (index > max) index = 0
+  if (index < 0) index = max
+  current = FILES[index]; explain.hidden = index
   anchor.href = "/Kuran/reader.html#"+current.link
   anchor.target = "iqra"
   img.src = "image/"+current.file
-  text.name = current.file
+  esma.href = current.name+".html"
+  // text.name = current.file
   text.innerText = "???"
 }
 title.innerText = document.title;
@@ -130,10 +150,13 @@ al-qahhar.jpg	Vahid	v=39:4&r=wHd&r=qhr
 limenil-mulk.jpg	Vahid	v=40:16&r=wHd&r=qhr
 ya vehhab.jpg	Vehhab	v=38:35&r=whb
 ar-razzaq.jpg	Vehhab	v=51:58&r=rzq
-la tuzig qulubana.jpg	Vehhab	v=3:8&r=whb`.split('\n')
+la tuzig qulubana.jpg	Vehhab	v=3:8&r=whb
+es-semiul-basir.jpg	Semi	v=17:1&r=smE&r=bSr
+leyse kemislihi.jpg	Semi	v=42:11&r=smE&r=bSr	
+takabbel minna.jpg	Semi	v=2:127&r=smE&r=Elm`
 
 const FILES = []
-for (let d of DATA) {
+for (let d of DATA.split('\n')) {
     let [file, name, link] = d.split('\t')
     if (!link) continue
     FILES.push({file, name, link})
