--- a/esma/Latif.html
+++ b/esma/Latif.html
@@ -11,31 +11,37 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Latîf, el-Habîr &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p class=preWrap>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=*nb">3:1</a> <b></b> <br>
-<i></i>
+<p>Tartışma konusu olan <b>ru'yetullah</b> meselesi: Allah'ı görmek mümkün mü? Şu âyet "Hayır, değil" diyor:
+<img class=full src="image/ruyetullah.jpg" alt="vehuvel-latîful-habîr"></p>
+<p><a name="v=6:103&r=lTf&r=xbr">6:103</a> 
+  <b>lâ tudrikuhul-ebsâr, vehuve yudrikul-ebsâr, vehuvel-latîful-ḣabîr</b> <br>
+  <i>Hiçbir beşerî görüş O'nu kuşatamaz, halbuki O her türlü beşerî görüşü çevreleyip kuşatır: yalnız O'dur tam nüfûz edilemez olan, her şeyden haberdar bulunan.</i></p>
+<p>Bir sonraki Surenin <a name="v=7:143&r=nZr&r=rAy">7:143</a> 
+<a target=Kuran href="https://islamansiklopedisi.org.tr/len-terani"><b>len terâniy</b></a> âyeti son noktayı koymuş: <i>“Beni asla göremezsin!”</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p class=small>Latîf terimi, nitelik olarak son derece ince olan ve bu nedenle de fark edilemez ve nüfûz edilemez bulunan şeyleri gösterir. Bu terimin, Kuran'da Allah ile ilgili olarak ve <b>habîr</b> sıfatı ile birlikte geçtiği her yerde Allah'ın, kendisinin her şeyden haberdar oluşuna karşılık insanın tasavvuru, tahayyülü ve idrakinin erişemediği bir konumda bulunduğu düşüncesini ifade etmek için kullanıldığı görülmektedir.<br>
+  Kaynak: <a target=Kuran href="https://kuranmeali.com/Aciklama.php?meal=muhammedesed&sureno=6&ayet=103">Muhammed Esed Meali 6:103</a>
+<img class=narrow src="image/el-latif.jpg" alt="el-latif"></p>
 <div class="caption">
-  <b>el-Gafûr</b> -- hataları silen
+  <b>el-Latîf</b> -- inceliği nedeniyle fark edilmeyen
+</div>
+<br>
+<p>Diğer isim <b>el-Habîr</b> ise, "Amellerin ne durumda olduğunu bilen ve haber veren" anlamına gelir. Yani işlerin içyüzünü de bilendir ve Ödeşme Gününde bunları tek tek bildirecektir.
+<img class=narrow src="image/el-habir.png" alt="el-habir"></p>
+<div class="caption">
+  <b>el-Habîr</b> -- haberi olan ve haber veren
 </div>
 <p>
-<img class=narrow src="" alt=""></p>
-<div class="caption">
-  <b>eş-Şekûr</b> -- iyilikleri ödüllendiren
-</div>
-<p><a name="v=2:2&r=gfr&r=$kr">2:2</a>
-<b></b> <br>
-<i></i>
+  <a name="v=35:14&r=nbA&r=xbr">35:14</a>
+  <b>... velâ yunebbiuke miślu ḣabîr</b> <br>
+  <i>... sana bir <b>habîr</b> gibi haber veren olamaz</i>
+</p>
+<p>
+  <a name="v=67:14&r=lTf&r=xbr">67:14</a>
+  <b>elâ ya'lemu men ḣalak, vehuvel-latîful-ḣabîr</b> <br>
+  <i>Yaratan bilmez mi! O derin bilgi sahibidir, haberdardır.</i>
 </p>
 <script src="init.js"></script>
   </body>
