--- a/esma/Semi.html
+++ b/esma/Semi.html
@@ -16,7 +16,7 @@
 <p>Kitabımızda insana verilen üç nimet (kulak, göz, akıl) sık sık vurgulanır: <br> 
 <a name="v=67:23&r=smE&r=bSr">67:23</a>
 <b>vece’ale lekumus-sem’a vel-ebsâra vel-ef-ide</b> <br>
-<i>“O'dur sizi inşâ eden; size işitme, gözme ve (akleden) kalpler veren</i>
+<i>“O'dur sizi inşâ eden; size işitme, görme ve (akleden) kalpler veren</i>
 </p>  
 <p>
 <img class=narrow src="image/es-semiul-basir.jpg" alt=""></p>
@@ -31,7 +31,7 @@
   <i>Hiçbir şey, O'nun benzeri gibi bile olamaz. O duyandır, görendir.</i>
 </p>
 <br>
-<p>Bazı ayetlerde "iştmek" ve "bilmek" yan yana geçiyor:
+<p>Bazı ayetlerde "işitmek" ve "bilmek" yan yana geçiyor:
 <img class=full src="image/takabbel minna.jpg" alt=""></p>
 <div class="caption">
   Hz İbrahim ve İsmail'in Kâbe'yi yaptıktan sonraki duaları
