--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -28,6 +28,7 @@
     padding: 2px 5px;
     color: gray;
     font-size: large;
+    height: 30px;
   }
   button:hover {
     background: rgba(0, 0, 0, 0.5);
@@ -45,6 +46,7 @@
     padding: 6px;
     background: wheat;
     line-height: 1.3;
+    font-size: small;
   }
   #esma {
     text-decoration: none;
@@ -62,6 +64,7 @@
 </div>
 <p id=explain>
   Esmâ-i Husnâ sayfalarında kullanılan hat eserlerine buradan erişilir. Levhaların ve diğer eserlerin referansları ilgili sayfalarda bulunur. <br>
+  * E butonuna tıklayınca ilgili Esma sayfasına gider. <br>
   * Soru işaretine tıklayınca, ipucu olarak dosyanın adı çıkar. <br>
   * Resimlere tıklayınca, ayet mushaf içinde gösterilir. <br>
   <br>
@@ -110,7 +113,7 @@ vezkurullahe.jpg
 malikul-mulk.jpg	Malik	v=3:26&r=mlk
 maliki yevmiddin.jpg	Malik	v=1:4&r=mlk&r=ywm
 melikul-hakkul-mubin.jpg	Malik	v=23:116&r=mlk&r=Hqq
-sayfa 547.png	Selam	p=547&r={ll~ah&r=smw&r=Hsn
+sayfa 547.png	Selam	
 Kuddûs-Selâm.jpg	Selam	v=59:23&r=mlk&r=qds&r=slm
 es-Selâm.jpg	Selam	v=10:25&r=dwr&r=slm
 el-Mumin.jpg	Mumin	v=59:23&r=Amn&r=hmn
@@ -153,7 +156,10 @@ ar-razzaq.jpg	Vehhab	v=51:58&r=rzq
 la tuzig qulubana.jpg	Vehhab	v=3:8&r=whb
 es-semiul-basir.jpg	Semi	v=17:1&r=smE&r=bSr
 leyse kemislihi.jpg	Semi	v=42:11&r=smE&r=bSr	
-takabbel minna.jpg	Semi	v=2:127&r=smE&r=Elm`
+takabbel minna.jpg	Semi	v=2:127&r=smE&r=Elm
+ruyetullah.jpg	Latif	v=6:103&r=lTf&r=xbr
+el-latif.jpg	Latif	v=67:14&r=lTf&r=xbr
+el-habir.png	Latif	v=35:14&r=nbA&r=xbr`
 
 const FILES = []
 for (let d of DATA.split('\n')) {
