add ruyetullah -- Latif

--- a/esma/Latif.html
+++ b/esma/Latif.html
@@ -13,13 +13,16 @@
 
 <h3>el-Latîf, el-Habîr &emsp;<button class=goBack>◀</button></h3>
 
-<p>Tartışma konusu olan <b>ru'yetullah</b> meselesi: Allah'ı görmek mümkün mü? Şu âyet "Hayır, değil" diyor:
+<p>Tartışma konusu olan <b>ru'yetullah</b> meselesi: "Dünya gözüyle Allah'ı görmek mümkün mü?" Şu âyet "Hayır, değil" diyor:
 <img class=full src="image/ruyetullah.jpg" alt="vehuvel-latîful-habîr"></p>
 <p><a name="v=6:103&r=lTf&r=xbr">6:103</a> 
   <b>lâ tudrikuhul-ebsâr, vehuve yudrikul-ebsâr, vehuvel-latîful-ḣabîr</b> <br>
   <i>Hiçbir beşerî görüş O'nu kuşatamaz, halbuki O her türlü beşerî görüşü çevreleyip kuşatır: yalnız O'dur tam nüfûz edilemez olan, her şeyden haberdar bulunan.</i></p>
 <p>Bir sonraki Surenin <a name="v=7:143&r=nZr&r=rAy">7:143</a> 
 <a target=Kuran href="https://islamansiklopedisi.org.tr/len-terani"><b>len terâniy</b></a> âyeti son noktayı koymuş: <i>“Beni asla göremezsin!”</i>
+</p>
+<p class=small>... İkinci anlayışa göre peygamberler dahil olmak üzere hiçbir insan Allah’ı dünyada göremez. Nitekim Hz. Mûsâ, Allah’ı dünyada görmek istemiş, fakat, “Sen beni asla göremezsin” cevabını almıştır (7/143). Ayrıca Kur’an gözlerin Allah’ı göremeyeceğini haber vermiş (6/103), âlimler de bu âyete rü’yetullahın dünyada vuku bulmayacağı anlamını vermiştir. Sahih hadislerde de rü’yetullahın âhirette gerçekleşeceği bildirilmiştir. Âlimlerin büyük çoğunluğu bu görüştedir.<br>
+  Kaynak: <a target=Kuran href="hhttps://islamansiklopedisi.org.tr/ruyetullah">İslam Ansiklopedisi</a>
 </p>
 <p class=small>Latîf terimi, nitelik olarak son derece ince olan ve bu nedenle de fark edilemez ve nüfûz edilemez bulunan şeyleri gösterir. Bu terimin, Kuran'da Allah ile ilgili olarak ve <b>habîr</b> sıfatı ile birlikte geçtiği her yerde Allah'ın, kendisinin her şeyden haberdar oluşuna karşılık insanın tasavvuru, tahayyülü ve idrakinin erişemediği bir konumda bulunduğu düşüncesini ifade etmek için kullanıldığı görülmektedir.<br>
   Kaynak: <a target=Kuran href="https://kuranmeali.com/Aciklama.php?meal=muhammedesed&sureno=6&ayet=103">Muhammed Esed Meali 6:103</a>
