--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -68,7 +68,7 @@
 <h3 id=title></h3>
 <div class=aligned>
     <button id=prev>◀</button>
-    <button><a id=esma>E</a></button>
+    <button tabindex=-1><a id=esma>E</a></button>
     <div id=text></div>
     <button><a id=check>✔</a></button>
     <button id=next>▶</button>
@@ -182,7 +182,10 @@ leyse kemislihi.jpg	Semi	v=42:11&r=smE&r=bSr
 takabbel minna.jpg	Semi	v=2:127&r=smE&r=Elm
 ruyetullah.jpg	Latif	v=6:103&r=lTf&r=xbr
 el-latif.jpg	Latif	v=67:14&r=lTf&r=xbr
-el-habir.png	Latif	v=35:14&r=nbA&r=xbr`
+el-habir.png	Latif	v=35:14&r=nbA&r=xbr
+el-gafur-el-vedud.jpg	Vedud	v=85:14&r=gfr&r=wdd
+ya-vedud.jpg	Vedud	v=11:90&r=rHm&r=wdd
+el-mecid.jpg	Vedud	v=11:73&r=Hmd&r=mjd`
 
 const FILES = []
 function readData() {
