--- a/esma/Vedud.html
+++ b/esma/Vedud.html
@@ -11,31 +11,41 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
-
-<p></p>  
-<p class=preWrap>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=*nb">3:1</a> <b></b> <br>
-<i></i>
+<h3>el-Vedûd, el-Mecîd &emsp;<button class=goBack>◀</button></h3>
+ 
+<p>Allah için ikişer kere kullanılan iki güzel isim: 
+<img class=narrow src="image/el-gafur-el-vedud.jpg" alt="el-gafur-el-vedud."></p>
+<div class="caption">
+  <a target=Kuran href="https://www.takidasanat.com/ve-huvel-gafur-el-vedud-yazili-gumus-yuzuk">Yüzük üstüne ayet yazmak</a>
+  iyi fikir değil ama hat çok güzel
+</div>
+<p>Bu iki ayette iki isim yan yana, birbirini tamamlıyor. <br>
+  <a name="v=85:14&r=gfr&r=wdd&r=mjd">85:14-15</a> 
+  <b>vehuvel-gafûr, el-vedûd, zul’arş, el-mecîd</b> <br>
+  <i>O'dur gerçek bağışlayıcı, sevgide kapsayıcı, Arşın sahibi, şanı yüce</i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>Birinci kelimenin sevgiyle bağlantısı, onu bâtıl muskalarda en sık yazılan, bâtıl fallarda en çok söylenen isim haline getirmiş:
+<img class=narrow src="image/ya-vedud.jpg" alt="ya-vedud"></p>
 <div class="caption">
-  <b>el-Gafûr</b> -- hataları silen
+  <b>el-Vedûd</b> -- sevgi kaynağı
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
+<p><a name="v=11:90&r=rHm&r=wdd">11:90</a> 
+  <b>inne rabbî rahîmun vedûd</b> <br>
+  <i>Rabbim çok merhametlidir; sevginin kaynağıdır</i>
+</p>
+<p class=small>Kur'ân-ı Kerîm'de vedûd ismi esmâ-i hüsnâdan olan rahîm ve gafûr isimleriyle birlikte iki âyette geçmektedir (11/90; 85/14). Ayrıca vüd kavramı fiilî sıfatların kuruluşunda Allah'a nisbet edilmektedir. Bu âyetlerin birinde Cenâb-ı Hakk'ın iman edip sâlih amel işleyenler için gönüllerde sevgi yaratacağı ifade edilmektedir (19/96).<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/vedud">İslam Ansiklopedisi</a>
+</p>
+<br>
+<p>Diğer kelime <b>el-Mecîd</b> ise iki yerde Kuran için, iki yerde Allah için sıfat olmuş:
+<img class=narrow src="image/el-mecid.jpg" alt="el-mecid"></p>
 <div class="caption">
-  <b>eş-Şekûr</b> -- iyilikleri ödüllendiren
+  <b>el-Mecîd</b> -- şanı çok yüce
 </div>
-<p><a name="v=2:2&r=gfr&r=$kr">2:2</a>
-<b></b> <br>
-<i></i>
+<p>Her namazda okunan salâvâtın içindeki bu ifade kulağa çok tanıdık geliyor. Hat eseri olarak bulamadım. <br>
+  <a name="v=11:73&r=Hmd&r=mjd">11:73</a>
+  <b>innehû hamîdun mecîd</b> <br>
+  <i>Her övgüye layık olan O'dur; şanı çok yüce olan O!</i>
 </p>
 <script src="init.js"></script>
   </body>
