--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+7) {
+    #iki li:nth-child(n+8) {
         color: lightgray;
     }
     div.nav {
@@ -80,7 +80,7 @@
   <li>17. <a href="/Kitap/esma/Vehhab.html">el-Vehhâb, er-Rezzâk</a>
   <li>18. <a href="/Kitap/esma/Semi.html">es-Semî’, el-Basîr</a>
   <li>19. <a href="/Kitap/esma/Latif.html">el-Latîf, el-Habîr</a>
-  <li>20. el-Vedûd, el-Mecîd
+  <li>20. <a href="/Kitap/esma/Vedud.html">el-Vedûd, el-Mecîd</a>
   <li>21. el-Muhyî, el-Mumît
   <li>22. el-Hayy, el-Kayyûm
   <li>23. el-Evvel, el-Âhir
