--- a/esma/Husna.html
+++ b/esma/Husna.html
@@ -30,6 +30,7 @@
     color: gray;
     font-size: large;
     border: none;
+    aspect-ratio: 1;
   }
   #prev {
     border-radius: 10px 0 0 10px;
@@ -41,14 +42,14 @@
     color: #eee;
     background: rgba(0, 0, 0, 0.5);
   }
-  #text {
+  #question {
     background: #eee;
     display: inline-block;
     font-size: small;
     width: 170px;
     padding: 5px;
   }
-  button, #text {
+  button, #question {
     cursor: pointer;
     box-sizing: border-box;
     height: 26px;
@@ -69,7 +70,7 @@
 <div class=aligned>
     <button id=prev>◀</button>
     <button tabindex=-1><a id=esma>E</a></button>
-    <div id=text></div>
+    <div id=question></div>
     <button><a id=check>✔</a></button>
     <button id=next>▶</button>
 </div>
@@ -80,7 +81,8 @@
   Esmâ-i Husnâ sayfalarında kullanılan hat eserlerine buradan erişilir. Levhaların ve diğer eserlerin referansları ilgili sayfalarda bulunur. <br>
   * E butonuna tıklayınca ilgili Esma sayfasına gider. <br>
   * Soru işaretine tıklayınca, ipucu olarak dosyanın adı çıkar. <br>
-  * Resimlere tıklayınca, ayet mushaf içinde gösterilir. <br>
+  * Tik işaretine tıklayınca ipuçlarını sürekli gösterir. <br>
+  * Hat resmine tıklayınca, ayeti mushaf içinde gösterir. <br>
   <br>
   Mobil cihazlarda ekranı yan tutmak daha iyi okunmayı sağlar.
 </p>
@@ -99,8 +101,7 @@ function show_slide(i) {
   anchor.target = "iqra"
   img.src = "image/"+current.file
   esma.href = current.name+".html"
-  // text.name = current.file
-  text.innerText = "???"
+  question.innerText = "???"
 }
 function doKey(evt) {
   if (!evt.key) return
@@ -110,11 +111,18 @@ function doKey(evt) {
     case 'ARROWDOWN': case 'ARROWRIGHT':
       next.onclick(); break
     case 'ESCAPE': 
-      text.innerText = "???"; break
+      question.innerText = "???"; break
   }
 }
-function doText() {
-  text.innerText = current.file
+function doQuestion() {
+  question.innerText = current.file
+}
+function doCheck() {
+  if (check.textContent == '?') {
+    check.textContent = '✔'
+  } else {
+    check.textContent = '?'
+  }
 }
 function init() {
   title.innerText = document.title;
@@ -122,7 +130,8 @@ function init() {
   readData(); show_slide(0); shuffle()
   prev.onclick = () => show_slide(index-1)
   next.onclick = () => show_slide(index+1)
-  text.onclick = doText
+  question.onclick = doQuestion
+  check.onclick = doCheck
   document.onkeydown = doKey
 }
 
