--- a/esma/Muhyi.html
+++ b/esma/Muhyi.html
@@ -11,31 +11,37 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Muhyî, el-Mumît &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
+<p>Allah, işlerini melekleri ile yapar; ama yağmuru indirmek gibi, öldürmek ve diriltmek de Allah'a mahsus.
+<img class=full src="image/yuhricul hayye.jpg" alt="yuhricul hayye"></p>
+<p><a name="v=30:19&r=mwt&r=Hyy">30:19</a> 
+  <b>yuḣricul-hayye minel-meyyiti veyuḣricul-meyyite minel-hayy</b> <br>
+  <i>Ölüden diriyi çıkarıyor; diriden de ölüyü çıkarıyor. Yeryüzünü ölümünün ardından canlandırıyor. İşte siz de böyle çıkarılacaksınız. </i>
 </p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p class=small>Kur’an’da ihyâ fiilinin geçtiği birçok âyette “imâte” fiili de yer alır. “Ölmek” mânasındaki “mevt” kökünden türetilen “mümît” kelimesi Kur’an’da bulunmamakla birlikte aynı kalıptan türeyen fiil sîgaları yirmi üç âyette Allah’a nisbet edilmiş, ayrıca “ölümüne veya işinin bitirilmesine hükmetmek” anlamına gelen ve “kazâ” kavramıyla oluşan çeşitli ifadeler de zât-ı ilâhîye izâfe edilmiştir <br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/muhyi">İslam Ansiklopedisi</a>
+</p>
+<p>Hayat ve ölümün birlikte geçtiği 
+<a href="/Kuran/mujam.html#r=mwt&r=Hyy">65 ayet var</a>. 
+Bunların yalnız ikisinde <b>el-Muhyî</b> isim olarak geçiyor:
+<img class=narrow src="image/el-muhyi.png" alt="el-muhyi"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>el-Muhyî</b> -- can veren, dirilten
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
+<p><a name="v=30:50&r=mwt&r=Hyy">30:50</a>
+<b>keyfe yuhyil-arda ba’de mevtihâ, inne żâlike lemuhyil-mevtâ</b> <br>
+<i>Yeryüzünü ölümünün ardından nasıl diriltiyor! Şüphesiz ki O, ölüleri de diriltendir.</i> <br>
+Bu iki ayette, ölü toprağın yağmur ile canlanması, insanların tekrar dirileceğine delil olarak gösterilmiş.
+</p>
+<p>Diğer isim <b>el-Mumît</b> bu haliyle yok, ancak fiil olarak kullanılmış:
+<img class=narrow src="image/el-mumit.png" alt="el-mumit"></p>
 <div class="caption">
-  <b></b> -- 
+  <b>el-Mumît</b> -- can alan, öldüren
 </div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<p><a name="v=40:68&r=mwt&r=Hyy">40:68</a>
+<b>huvelleżî yuhyî veyumît</b> <br>
+<i>Dirilten ve öldüren O’dur</i>
 </p>
 <script src="init.js"></script>
   </body>
