--- a/esma/index.html
+++ b/esma/index.html
@@ -36,7 +36,7 @@
     /* #bir li:nth-child(n+2) {
         color: lightgray;
     } */
-    #iki li:nth-child(n+8) {
+    #iki li:nth-child(n+9) {
         color: lightgray;
     }
     div.nav {
@@ -81,7 +81,7 @@
   <li>18. <a href="/Kitap/esma/Semi.html">es-Semî’, el-Basîr</a>
   <li>19. <a href="/Kitap/esma/Latif.html">el-Latîf, el-Habîr</a>
   <li>20. <a href="/Kitap/esma/Vedud.html">el-Vedûd, el-Mecîd</a>
-  <li>21. el-Muhyî, el-Mumît
+  <li>21. <a href="/Kitap/esma/Muhyi.html">el-Muhyî, el-Mumît</a>
   <li>22. el-Hayy, el-Kayyûm
   <li>23. el-Evvel, el-Âhir
   <li>24. ez-Zâhir, el-Bâtın
