--- a/esma/Hayy.html
+++ b/esma/Hayy.html
@@ -11,32 +11,45 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Hayy, el-Kayyûm &emsp;<button class=goBack>◀</button></h3>
 
-<p></p>  
-<p>
-<img class=full src="" alt=""></p>
-<p><a name="v=3:1&r=gfr&r=jnb">3:1</a> <b></b> <br>
-<i></i>
-</p>
-<p class=preWrap></p>
-<p class=small><br>
-  Kaynak: <a target=Kuran href="">İslam Ansiklopedisi</a>
-</p><br>
-<p>
-<img class=narrow src="" alt=""></p>
+<p>Hayat veren bu isimler üç âyette yan yana geçiyor:
+<img src="image/anetil-vucuh.jpg" alt="ve'anetil-vucûh"></p>
 <div class="caption">
-  <b></b> -- 
+  Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/379357968596163072/">Pinterest</a>
 </div>
-<p>
-<img class=narrow src="" alt=""></p>
-<div class="caption">
-  <b></b> -- 
-</div>
-<p><a name="v=2:2&r=gfr&r=mkr">2:2</a>
-<b></b> <br>
-<i></i>
+<p>Birinci isim <b>el-Hayy</b> bizzat "hayatın kaynağı"... <br>
+  <a name="v=20:111&r=Hyy&r=qwm">20:111</a> 
+  <b>ve'anetil-vucûhu lil-hayyil-qayyûm</b> <br>
+  <i>Yüzler, Hayy ve Kayyum olan Allah'a baş eğmiştir</i>
 </p>
+<p>İkinci isim, modern dildeki anlam kayması nedeniyle, biraz karmaşık:</p>
+<p class=small>Sözlükte “doğrulup ayakta durmak, devam ve sebat etmek, bir işin idaresini üzerine almak, gözetip korumak” anlamındaki <b>kıyâm</b> kökünden mübalağa ifade eden bir sıfat olup “her şeyin varlığı kendisine bağlı olan, kâinatı idare eden” demektir. <b>Kıyâm</b> kökünün ifade ettiği mânaların ilki maddî ve yaratılmışlık unsurları taşıdığından Allah’a nisbet edilmemekte, diğerleri ise ulûhiyyet makamına yakışacak bir muhteva çerçevesinde <b>kayyûm</b> ismi içinde mütalaa edilmektedir. Aynı kökten türeyen <b>kāim</b> sıfatı iki yerde, <b>makām</b> ve <b>kayyûm</b> da üçer âyette Allah’a izâfe edilmiştir.<br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/kayyum">İslam Ansiklopedisi</a>
+</p>
+<br>
+<img class=narrow src="image/el-hayy.jpg" alt="el-hayy"></p>
+<div class="caption">
+  <b>el-Hayy</b> -- canlı, hayat kaynağı<br>
+  <b>el-Kayyûm</b> -- hayatı elinde tutan
+</div>
+<p>Vahdet ile ilişkisini Âyetul-kursî tanımlıyor: <br>
+  <a name="v=2:255&r=Hyy&r=qwm">2:255</a>
+  <b>allâhu lâ ilâhe illâ huvel-hayyul-kayyûm</b> <br>
+  <i>Allah (ki) O'ndan başka ilah yoktur. Diridir, hayatı elinde tutandır. </i>
+</p>
+<p>Aynı ifadeyi Âl-i İmran Suresinin başında okuyoruz: <br>
+  <a name="v=3:2&r=Hyy&r=qwm">3:2</a>
+  <b>allâhu lâ ilâhe illâ huvel-hayyul-kayyûm</b> <br>
+  <i>Allah, ki O'ndan başka tanrı yoktur, daima diri ve yaratıklarını koruyup yöneticidir.</i>
+<p>
+<img src="image/el-Mumit.jpg" alt="el-Mumit"></p>
+<div class="caption">
+  <b>el-Mumît, el-Hayy, el-Kayyûm</b> <br>
+  Bu levha bir âyet değil, sadece üç güzel isim <br>
+  Hattat: Adnan Beyhan -- <a target=Kuran href="http://www.kalemguzeli.org/hatteserleriayrinti.php?KNO=2101&HKNO=20">Kalem Güzeli</a>
+</div>
+<br>
 <script src="init.js"></script>
   </body>
 </html>
