--- a/esma/Muhyi.html
+++ b/esma/Muhyi.html
@@ -15,6 +15,10 @@
 
 <p>Allah, işlerini melekleri ile yapar; ama yağmuru indirmek gibi, öldürmek ve diriltmek de Allah'a mahsus.
 <img class=full src="image/yuhricul hayye.jpg" alt="yuhricul hayye"></p>
+<div class="caption">
+  Ortadaki <b>vav</b> harfinin iki tarafı simetrik, bilmeden okunamaz <br>
+  Hattat: Mehmet Memiş -- <a target=Kuran href="https://tr.pinterest.com/pin/492649943964452/">Pinterest</a>
+</div>
 <p><a name="v=30:19&r=mwt&r=Hyy">30:19</a> 
   <b>yuḣricul-hayye minel-meyyiti veyuḣricul-meyyite minel-hayy</b> <br>
   <i>Ölüden diriyi çıkarıyor; diriden de ölüyü çıkarıyor. Yeryüzünü ölümünün ardından canlandırıyor. İşte siz de böyle çıkarılacaksınız. </i>
