--- a/esma/Bari.html
+++ b/esma/Bari.html
@@ -53,9 +53,10 @@ Creator, Inventor, Bestower of forms
 </p>
 <br>
 <p>"el-Musavvir" kelimesi, Türkçe <i>sûret</i> ve <i>sûr</i> ile aynı kökten türetilmiş, sad ile yazılır. (sin ile yazılan <i>sûre</i> kelimesinin kökü farklı) Söz konusu <a name="v=59:24&r=xlq&r=brA&r=Swr">59:24</a> dışında ancak fiil halinde kullanılmış.
-<img class=narrow src="image/al-musavvir.jpg" alt="el-Musavvir"></p>
+<img class=narrow src="image/al-musavvir.png" alt="el-Musavvir"></p>
 <div class="caption">
-  <b>el-Musavvir</b> -- biçim veren
+  <b>el-Musavvir</b> -- biçim veren <br>
+  Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/520165825732294349/">Pinterest</a>
 </div>
 <p>Şu âyet, "tasarlama" anlamına yer bırakmıyor: <br>
 <a name="v=7:11&r=xlq&r=Swr">7:11</a> 
